# Boiler-Plates

./: .gitignore  README.md  ai-roadmap-free.jsx  main.py  pyproject.toml
AI/Project/offline_knowledge_assistant/: chat.py  pyproject.toml
AI/Project/smart_data_analyzer/: app.py  pyproject.toml  readme.MD  requirements.txt
AI/Project/spam_detector/: preprocessor.py
Project/AI/offline_knowledge_assistant/: README.md  chat.py  ingest.py  setup.py
Project/AI/smart_data_analyzer/: analyzer.py  cli.py
Project/AI/spam_detector/: README.md  app.py  models.py  pyproject.toml  requirements.txt  train.py
Project/AgenticAI/ai_dev_team/: agents.py  crew.py  readme.md  run.py  setup.py  tasks.py
Project/AgenticAI/local_research_agent/: agent.py  main.py  memory.py  pyproject.toml  readme.md  requirements.txt  run.py  setup.py  tools.py
Project/AgenticAI/resume_tailoring_agent/: graph.py  nodes.py  readme.md  run.py  setup.py  state.py
Project/DL/ai_art_generator/: app.py  readme.md  setup.py  train_lora.py
Project/DL/fake_news_detector/: app.py  readme.md  setup.py  trainer.py
Project/DL/medical_image_classifier/: app.py  gradcam.py  model.py  readme.md  setup.py  train.py
Project/ML/credit_risk_system/: app.py  preprocessor.py  readme.md  setup.py  trainer.py
Project/ML/house_price_api/: Dockerfile  api.py  preprocessor.py  readme.md  train.py
Project/ML/movie_recommender/: app.py  readme.md  recommender.py  setup.py  trend_predictor.py
fremeworks/FASTAPI/: fastapi_server_practice.py
project_ideas/: AI.md  Agentic.md  DL.md  ML.md  free_resource.md
(+79 files in other folders)
