[project]
name = "interview-prepration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "gradio>=6.9.0",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
