[project]
name = "local_research_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "markdown>=3.10.2",
    "ollama>=0.6.1",
    "sentence-transformers>=5.3.0",
    "wikipedia>=1.4.0",
]
